Fix URLs to use correct GitHub domain

--- a/index.html
+++ b/index.html
@@ -56,14 +56,14 @@
       <h2>A.pdf</h2>
       <div class="links">
         <!-- 备用：在新窗口打开，可规避部分移动端内嵌不滚动或只显示第一页的问题 -->
-        <a href="https://hzeng949-boop-github.io/Hantable_菜单_compressed.pdf" target="_blank" rel="noopener">在新窗口打开 A.pdf</a>
+        <a href="https://hzeng949-boop.github.io/Hantable_菜单_compressed.pdf" target="_blank" rel="noopener">在新窗口打开 A.pdf</a>
         <!-- 如果需要下载链接，也可保留这一行（可选）
         <a href="https://hzeng949-boop-github.io/A.pdf" download>下载 A.pdf</a>
         -->
       </div>
       <iframe
         class="pdf-frame"
-        src="https://hzeng949-boop-github.io/Hantable_菜单_compressed.pdf"
+        src="https://hzeng949-boop.github.io/Hantable_菜单_compressed.pdf"
         title="Hantable_菜单_compressed.pdf 预览"
       ></iframe>
     </section>
@@ -72,14 +72,14 @@
     <section class="section">
       <h2>B.pdf</h2>
       <div class="links">
-        <a href="https://hzeng949-boop-github.io/Hantable_甜点.pdf" target="_blank" rel="noopener">在新窗口打开 B.pdf</a>
+        <a href="https://hzeng949-boop.github.io/Hantable_甜点.pdf" target="_blank" rel="noopener">在新窗口打开 B.pdf</a>
         <!-- 可选下载链接
         <a href="https://hzeng949-boop-github.io/B.pdf" download>下载 B.pdf</a>
         -->
       </div>
       <iframe
         class="pdf-frame"
-        src="https://hzeng949-boop-github.io/Hantable_甜点.pdf"
+        src="https://hzeng949-boop.github.io/Hantable_甜点.pdf"
         title="Hantable_甜点.pdf 预览"
       ></iframe>
     </section>
