Update header and remove PDF sections

--- a/index.html
+++ b/index.html
@@ -46,20 +46,10 @@
 </head>
 <body>
   <header>
-    <h1>PDF 上下预览</h1>
-    <p>同一链接内，上下展示两份 PDF：A.pdf 与 B.pdf</p>
+    <h1>HanTable BBQ Vigo</h1>
   </header>
 
   <main>
-    <!-- 第一份：A.pdf -->
-    <section class="section">
-      <h2>A.pdf</h2>
-      <div class="links">
-        <!-- 备用：在新窗口打开，可规避部分移动端内嵌不滚动或只显示第一页的问题 -->
-        <a href="https://hzeng949-boop.github.io/Hantable_菜单_compressed.pdf" target="_blank" rel="noopener">在新窗口打开 A.pdf</a>
-        <!-- 如果需要下载链接，也可保留这一行（可选）
-        <a href="https://hzeng949-boop-github.io/A.pdf" download>下载 A.pdf</a>
-        -->
       </div>
       <iframe
         class="pdf-frame"
@@ -67,15 +57,6 @@
         title="Hantable_菜单_compressed.pdf 预览"
       ></iframe>
     </section>
-
-    <!-- 第二份：B.pdf -->
-    <section class="section">
-      <h2>B.pdf</h2>
-      <div class="links">
-        <a href="https://hzeng949-boop.github.io/Hantable_甜点.pdf" target="_blank" rel="noopener">在新窗口打开 B.pdf</a>
-        <!-- 可选下载链接
-        <a href="https://hzeng949-boop-github.io/B.pdf" download>下载 B.pdf</a>
-        -->
       </div>
       <iframe
         class="pdf-frame"
@@ -84,11 +65,5 @@
       ></iframe>
     </section>
   </main>
-
-  <footer>
-    <small>
-      提示：若你的设备内嵌 PDF 预览无法滚动或只显示第一页，请使用上方“在新窗口打开”的链接。
-    </small>
-  </footer>
 </body>
 </html>
