--- a/index.html
+++ b/index.html
@@ -5,164 +5,57 @@
   <meta charset="utf-8">
   <title>HanTable BBQ Vigo</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="referrer" content="no-referrer">
   <style>
-    :root { color-scheme: light dark; }
     html, body {
       margin: 0;
       padding: 0;
+      height: 100%;
       font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans SC", "PingFang SC", "Microsoft YaHei";
-      line-height: 1.5;
       background: #fff;
       color: #111;
     }
-
-    /* Header 样式 */
-    header {
-      padding: 16px;
-      border-bottom: 1px solid #eee;
+    .wrap {
+      min-height: 100%;
       display: flex;
+      flex-direction: column;
       align-items: center;
-      justify-content: space-between;
-      flex-wrap: wrap;
-      gap: 12px;
+      justify-content: center; /* 垂直居中整块内容 */
+      padding: 24px;
+      box-sizing: border-box;
     }
-    .brand {
-      font-size: 20px;
-      font-weight: 600;
+    h1 {
+      margin: 0 0 24px;
+      font-size: 24px;
+      text-align: center;
     }
     .actions {
       display: flex;
-      gap: 10px;
+      gap: 12px;
+      flex-wrap: wrap;
+      justify-content: center;
     }
     .btn {
       appearance: none;
       border: 1px solid #000;
       background: #fff;
       color: #000;
-      padding: 8px 14px;
+      padding: 10px 18px;
       border-radius: 8px;
-      font-size: 14px;
-      cursor: pointer;
-      transition: background 0.15s ease, color 0.15s ease;
+      font-size: 16px;
+      text-decoration: none; /* a 标签按钮化 */
+      display: inline-block;
     }
-    .btn:active { transform: translateY(1px); }
     .btn:hover { background: #f7f7f7; }
-
-    main { padding: 16px; }
-
-    /* Section 与 iframe 默认高度（移动端自适应宽度，默认 70vh） */
-    .section { margin-bottom: 24px; }
-    .pdf-frame {
-      width: 100%;
-      height: 70vh;           /* 默认高度：更适合上下两个并存 */
-      border: 1px solid #ddd;
-      border-radius: 8px;
-      background: #fff;
-    }
-
-    /* 在较窄屏幕上仍保持占满宽度；高度通过 JS 动态调整 */
-    @media (max-width: 900px) {
-      .pdf-frame { height: 65vh; }
-    }
-
-    /* 高亮状态：按钮点击后让目标 iframe 填充视口高度 */
-    .fill-viewport {
-      height: 100vh !important;
-    }
+    .btn:active { transform: translateY(1px); }
   </style>
 </head>
 <body>
-  <header>
-    <div class="brand">HanTable BBQ Vigo</div>
+  <div class="wrap">
+    <h1>HanTable BBQ Vigo</h1>
     <div class="actions">
-      <button id="btnCarta" class="btn">Ver Carta</button>
-      <button id="btnPostre" class="btn">Ver Postre</button>
+      <a class="btn" href="https://hzeng949-boop.github.io/Hantable_菜单_compressed.pdf" target="_blank" rel="noopener">Ver Carta</a>
+      <a class="btn" href="https://hzeng949-boop.github.io/Hantable_甜点.pdf" target="_blank" rel="noopener">Ver Postre</a>
     </div>
-  </header>
-
-  <main>
-    <!-- 第一个 PDF：菜单（Carta） -->
-    <section id="secCarta" class="section">
-      <iframe
-        id="frameCarta"
-        class="pdf-frame"
-        src="https://hzeng949-boop.github.io/Hantable_菜单_compressed.pdf"
-        title="Hantable_菜单_compressed.pdf 预览"
-      ></iframe>
-    </section>
-
-    <!-- 第二个 PDF：甜点（Postre） -->
-    <section id="secPostre" class="section">
-      <iframe
-        id="framePostre"
-        class="pdf-frame"
-        src="https://hzeng949-boop.github.io/Hantable_甜点.pdf"
-        title="Hantable_甜点.pdf 预览"
-      ></iframe>
-    </section>
-  </main>
-
-  <script>
-    // 工具：平滑滚动到某 section 顶部
-    function scrollToSection(sectionId) {
-      const el = document.getElementById(sectionId);
-      if (!el) return;
-      const top = el.getBoundingClientRect().top + window.scrollY;
-      window.scrollTo({ top, behavior: 'smooth' });
-    }
-
-    // 工具：让某个 iframe 填充视口高度，其他恢复默认高度
-    function setFillViewport(targetFrameId) {
-      const frames = [ 'frameCarta', 'framePostre' ];
-      frames.forEach(id => {
-        const f = document.getElementById(id);
-        if (!f) return;
-        if (id === targetFrameId) {
-          f.classList.add('fill-viewport');
-        } else {
-          f.classList.remove('fill-viewport');
-        }
-      });
-    }
-
-    // 绑定按钮事件
-    const btnCarta = document.getElementById('btnCarta');
-    const btnPostre = document.getElementById('btnPostre');
-
-    btnCarta.addEventListener('click', () => {
-      setFillViewport('frameCarta');
-      scrollToSection('secCarta');
-    });
-
-    btnPostre.addEventListener('click', () => {
-      setFillViewport('framePostre');
-      scrollToSection('secPostre');
-    });
-
-    // 可选：页面首次加载时，根据设备高度微调默认 iframe 高度（更贴合视口）
-    // 说明：我们仅在首次加载时按比例设定，实际填充视口时用 .fill-viewport 强制为 100vh
-    function adjustInitialHeights() {
-      const vh = Math.max(document.documentElement.clientHeight, window.innerHeight || 0);
-      // 依设备高度选择一个较合适的默认高度
-      const defaultH = vh <= 700 ? Math.round(vh * 0.65) : Math.round(vh * 0.70);
-      [ 'frameCarta', 'framePostre' ].forEach(id => {
-        const f = document.getElementById(id);
-        if (f) f.style.height = defaultH + 'px';
-      });
-    }
-    adjustInitialHeights();
-
-    // 当用户旋转屏幕或改变窗口大小时，若处于“填充视口”状态，保持 100vh；否则重新微调默认高度
-    window.addEventListener('resize', () => {
-      const cartaIsFull = document.getElementById('frameCarta')?.classList.contains('fill-viewport');
-      const postreIsFull = document.getElementById('framePostre')?.classList.contains('fill-viewport');
-      if (cartaIsFull || postreIsFull) {
-        // 填充视口状态无需额外处理，CSS 已以 100vh 覆盖
-        return;
-      }
-      adjustInitialHeights();
-    });
-  </script>
+  </div>
 </body>
 </html>
