--- a/index.html
+++ b/index.html
@@ -6,56 +6,138 @@
   <title>HanTable BBQ Vigo</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
+    /* 基础样式与全屏容器 */
     html, body {
       margin: 0;
       padding: 0;
       height: 100%;
       font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans SC", "PingFang SC", "Microsoft YaHei";
-      background: #fff;
-      color: #111;
+      color: #fff;
+      background: #000;
+      overflow: hidden; /* 防止出现背景视频滚动条 */
     }
-    .wrap {
-      min-height: 100%;
+    .page {
+      position: relative;
+      width: 100%;
+      height: 100%;
+    }
+
+    /* 背景视频全屏覆盖 */
+    .bg-video {
+      position: absolute;
+      inset: 0;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;       /* 保持填充裁切，铺满屏幕 */
+      z-index: 0;
+    }
+
+    /* 黑色蒙层降低亮度 */
+    .overlay {
+      position: absolute;
+      inset: 0;
+      background: rgba(0, 0, 0, 0.35); /* 可根据需要加深或变浅，0.35~0.6 */
+      z-index: 1;
+    }
+
+    /* 内容层：居中标题 + 按钮 */
+    .content {
+      position: relative;
+      z-index: 2;
+      width: 100%;
+      height: 100%;
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: center; /* 垂直居中整块内容 */
+      justify-content: center;
       padding: 24px;
       box-sizing: border-box;
-    }
-    h1 {
-      margin: 0 0 24px;
-      font-size: 24px;
       text-align: center;
     }
-    .actions {
-      display: flex;
-      gap: 12px;
-      flex-wrap: wrap;
-      justify-content: center;
+
+    h1 {
+      margin: 0 0 24px;
+      font-size: clamp(22px, 4vw, 36px);
+      font-weight: 700;
+      letter-spacing: 0.5px;
     }
+
+    /* 按钮容器：纵向、居中、全宽，最大宽度 50vw */
+    .actions {
+      width: 100%;
+      max-width: 50vw;            /* 你要求的“带盖 50vw”（理解为最大宽度 50vw） */
+      display: flex;
+      flex-direction: column;     /* 纵向排列 */
+      gap: 12px;
+      align-items: stretch;       /* 子元素拉伸为容器宽度 */
+      justify-content: center;
+      box-sizing: border-box;
+    }
+
+    /* 按钮样式：白底黑字、圆角、全宽 */
     .btn {
-      appearance: none;
-      border: 1px solid #000;
+      display: inline-block;
+      width: 100%;
+      padding: 14px 18px;
+      border-radius: 10px;
+      border: 1px solid #fff;     /* 边框与页面风格一致，可改为 #000 */
       background: #fff;
       color: #000;
-      padding: 10px 18px;
-      border-radius: 8px;
-      font-size: 16px;
-      text-decoration: none; /* a 标签按钮化 */
-      display: inline-block;
+      font-size: clamp(16px, 2.8vw, 18px);
+      font-weight: 600;
+      text-decoration: none;
+      text-align: center;
+      box-shadow: 0 1px 6px rgba(0,0,0,0.25);
+      transition: background .15s ease, color .15s ease, transform .1s ease;
     }
-    .btn:hover { background: #f7f7f7; }
+    .btn:hover { background: #f1f1f1; }
     .btn:active { transform: translateY(1px); }
+
+    /* 小屏优化：当屏幕较窄时，max-width 仍为 50vw，这样按钮宽度为屏幕宽度的一半 */
+    @media (max-width: 480px) {
+      .actions { max-width: 80vw; } /* 如需更宽的按钮，在很窄屏幕上可以放宽到 80vw；若坚持 50vw，请删掉本规则 */
+    }
   </style>
 </head>
 <body>
-  <div class="wrap">
-    <h1>HanTable BBQ Vigo</h1>
-    <div class="actions">
-      <a class="btn" href="https://hzeng949-boop.github.io/Hantable_菜单_compressed.pdf" target="_blank" rel="noopener">Ver Carta</a>
-      <a class="btn" href="https://hzeng949-boop.github.io/Hantable_甜点.pdf" target="_blank" rel="noopener">Ver Postre</a>
+  <div class="page">
+    <!-- 背景视频（请将 src 替换成你上传的 mp4 文件名） -->
+    <video
+      class="bg-video"
+      src="https://hzeng949-boop.github.io/Nueva BARBACOA COREANA en VIGO 🔥🇰🇷👇🏻 +INFO ⏬📍 @hantablebarbecue 🗺️ Rúa Oporto, 15 – VigoC.mp4.mp4"
+      playsinline
+      autoplay
+      muted
+      loop
+    ></video>
+
+    <!-- 黑色半透明蒙层 -->
+    <div class="overlay"></div>
+
+    <!-- 居中内容：标题 + 按钮 -->
+    <div class="content">
+      <h1>HanTable BBQ Vigo</h1>
+      <div class="actions">
+        <a class="btn" href="https://hzeng949-boop.github.io/Hantable_菜单_compressed.pdf" target="_blank" rel="noopener">Ver Carta</a>
+        <a class="btn" href="https://hzeng949-boop.github.io/Hantable_甜点.pdf" target="_blank" rel="noopener">Ver Postre</a>
+      </div>
     </div>
   </div>
+
+  <script>
+    // 一些移动端会暂停自动播放，需要确保视频准备好后尝试播放
+    const vid = document.querySelector('.bg-video');
+    function tryPlay() {
+      if (!vid) return;
+      const p = vid.play();
+      if (p && typeof p.then === 'function') {
+        p.catch(() => {
+          // 有些浏览器在未交互时禁止自动播放，
+          // 我们可以在用户点击按钮时再触发播放，或者保持 muted 以提高自动播放成功率
+        });
+      }
+    }
+    document.addEventListener('DOMContentLoaded', tryPlay);
+  </script>
 </body>
 </html>
