Update title and video source in index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="zh-CN">
 <head>
   <meta charset="utf-8">
-  <title>HanTable BBQ Vigo</title>
+  <title>HANTABLE BBQ VIGO</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
     /* 基础样式与全屏容器 */
@@ -56,8 +56,8 @@
     }
 
     h1 {
-      margin: 0 0 24px;
-      font-size: clamp(22px, 4vw, 36px);
+      margin: 0 0 48px;
+      font-size: clamp(28px, 4vw, 40px);
       font-weight: 700;
       letter-spacing: 0.5px;
     }
@@ -65,7 +65,7 @@
     /* 按钮容器：纵向、居中、全宽，最大宽度 50vw */
     .actions {
       width: 100%;
-      max-width: 50vw;            /* 你要求的“带盖 50vw”（理解为最大宽度 50vw） */
+      max-width: 80vw;            /* 你要求的“带盖 50vw”（理解为最大宽度 50vw） */
       display: flex;
       flex-direction: column;     /* 纵向排列 */
       gap: 12px;
@@ -78,7 +78,7 @@
     .btn {
       display: inline-block;
       width: 100%;
-      padding: 14px 18px;
+      padding: 14px 14px;
       border-radius: 10px;
       border: 1px solid #fff;     /* 边框与页面风格一致，可改为 #000 */
       background: #fff;
@@ -104,7 +104,7 @@
     <!-- 背景视频（请将 src 替换成你上传的 mp4 文件名） -->
     <video
       class="bg-video"
-      src="https://hzeng949-boop.github.io/Nueva BARBACOA COREANA en VIGO 🔥🇰🇷👇🏻 +INFO ⏬📍 @hantablebarbecue 🗺️ Rúa Oporto, 15 – VigoC.mp4.mp4"
+      src="https://hzeng949-boop.github.io/Video_hantablevigo.mp4"
       playsinline
       autoplay
       muted
